# UniversalBlender

./: .gitignore  CMakeLists.txt  README.md  UniversalBlender.sln
CppWrapper/: CppWrapper.vcxproj  CppWrapper.vcxproj.filters  Wrapper.h
UniversalBlender/: UniversalBlender.vcxproj  UniversalBlender.vcxproj.filters
UniversalBlender/base/: BaseBlender.cpp  BaseBlender.h
UniversalBlender/cpu/: CPUBlender.cpp  CPUBlender.h
UniversalBlender/cuda/: CUDABlender.cpp  CUDABlender.h  blender_kernels.cu
UniversalBlender/lib/mac/: libunrollmap.dylib
UniversalBlender/lib/win/: UnrollMap32.lib  UnrollMap32d.lib  UnrollMap64.lib  UnrollMap64d.lib  UnrollMapd32.lib  UnrollMapd64.lib
UniversalBlender/opencl/: OpenCLBlender.cpp  OpenCLBlender.h  blender_kernels.cl
UniversalBlender/test/: BlenderWrapperTest.cpp  BlenderWrapperTest.h  CPUBlenderTest.cpp  CPUBlenderTest.h  CUDABlenderTest.cpp  CUDABlenderTest.h  OpenCLBlenderTest.cpp  OpenCLBlenderTest.h  headers.h  main.cpp
UniversalBlender/utils/: UnrollMap.h  base64.h  common.cpp  common.h  log.cpp  log.h  macro.h  timer.cpp  timer.h
UniversalBlender/wrapper/: BlenderWrapper.cpp  BlenderWrapper.h
UniversalBlenderTest/: UniversalBlenderTest.vcxproj  main.cpp  stdafx.cpp  stdafx.h  unittest1.cpp
UniversalBlenderTest/UniversalBlenderTest_Mac/UniversalBlenderTest_Mac.xcodeproj/: project.pbxproj
UniversalBlenderTest/UniversalBlenderTest_Mac/UniversalBlenderTest_Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UniversalBlenderTest/UniversalBlenderTest_Mac/UniversalBlenderTest_Mac.xcodeproj/project.xcworkspace/xcuserdata/zhangzhongke.xcuserdatad/: UserInterfaceState.xcuserstate
UniversalBlenderTest/UniversalBlenderTest_Mac/UniversalBlenderTest_Mac.xcodeproj/xcuserdata/zhangzhongke.xcuserdatad/xcschemes/: UniversalBlenderTest_Mac.xcscheme  xcschememanagement.plist
UniversalBlenderTest/results/: BlenderResult_CUDA.mocha
build(mac)/: Makefile
lib/win/: UnrollMap64.lib  UnrollMapd64.lib
mac/: Makefile
src/: CMakeLists.txt
src/base/: BaseBlender.cpp
src/cuda/: blender_kernels.cu
src/lib/win/: UnrollMap64d.lib
src/opencl/: OpenCLBlender.cpp  OpenCLBlender.h  blender_kernels.cl
src/utils/: UnrollMap.h  base64.cpp  log.cpp  timer.cpp  timer.h
src/wrapper/: BlenderWrapper.cpp  BlenderWrapper.h
test/: CMakeLists.txt  main.cpp  test.insp
wrapper/: CMakeLists.txt  Wrapper.cpp  Wrapper.h
